--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,7 @@
   <ul>
     <li *ngFor="let user of users()">
       {{ user.id }} : {{ user.name }}
+      <button (click)="removeUser(user)">Remove</button>
     </li>
   </ul>
   <div *ngIf="users().length === 0">
